--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,8 +22,12 @@ p {
 
 .terra {
 	height: 150px;
-width: auto;
+  width: auto;
 	position: relative;
+  @media (max-width: @screen-xs-max) { ... }
+  @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) { ... }
+  @media (min-width: @screen-md-min) and (max-width: @screen-md-max) { ... }
+  @media (min-width: @screen-lg-min) { ... }
 }
 
 .center {
