--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,6 +5,7 @@ body {
 h1, h2, h3 {
 	font-family: 'Roboto', 'sans-serif';
 	font-weight: 300;
+  
 }
 
 /* Gradient color1 - color2 - color1 */ 
@@ -18,6 +19,7 @@ hr {
 p {
 	font-family: 'Roboto', 'sans-serif';
 	font-weight: 300;
+  color: gold;
 }
 
 .terra {
@@ -32,11 +34,20 @@ p {
 
 .center {
 	margin-left: auto;
-  margin-right: auto;	
+  margin-right: auto;
 }
 
+.about {
+  background-image: url('../Portfolio/assets/images/div-image.1.jpg');
+}
+
+
 canvas {
-	border: 1px solid;
+	border: 5px solid;
+}
+
+.projects {
+  height: 310px;
 }
 
 .container {
@@ -44,6 +55,6 @@ canvas {
     max-width: 940px;
 }
 
-.navbar {
-  
+h4 {
+  color: green;
 }
